chore:  ikc upgrade tiny-bip39 to 1.0.0 and use anyhow instead of failure

--- a/imkey-core/ikc-common/Cargo.toml
+++ b/imkey-core/ikc-common/Cargo.toml
@@ -24,10 +24,11 @@ prost = "=0.11.2"
 bytes = "=1.4.0"
 prost-types = "=0.11.2"
 secp256k1 = { version = "=0.24.3", features = ["rand", "recovery"] }
-failure = "=0.1.8"
+anyhow = "=1.0.79"
 lazy_static = "=1.4.0"
 aes = "=0.8.3"
 cbc = "=0.1.2"
 parking_lot = "=0.12.1"
 bitcoin = "=0.29.2"
 byteorder = "=1.4.3"
+thiserror = "=1.0.56"
