--- a/imkey-core/ikc-device/Cargo.toml
+++ b/imkey-core/ikc-device/Cargo.toml
@@ -20,9 +20,10 @@ sha1 = "=0.6.1"
 rsa = "=0.7.2"
 lazy_static = "=1.4.0"
 regex = "=1.9.3"
-failure = "=0.1.8"
+anyhow = "=1.0.79"
 log = {version = "=0.4.17", features = ["std"]}
 prost = "=0.11.2"
 prost-types = "=0.11.2"
 bytes = "=1.4.0"
 parking_lot = "=0.12.1"
+thiserror = "=1.0.56"
