--- a/imkey-core/ikc-wallet/coin-cosmos/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-cosmos/Cargo.toml
@@ -22,7 +22,7 @@ num-bigint = "=0.4.3"
 num-traits = "=0.2.15"
 num-integer = "=0.1.45"
 base64 = "=0.13.1"
-failure = "=0.1.8"
+anyhow = "=1.0.79"
 bytes = "=1.4.0"
 prost = "=0.11.2"
 prost-types = "=0.11.2"
