--- a/imkey-core/ikc-transport/Cargo.toml
+++ b/imkey-core/ikc-transport/Cargo.toml
@@ -10,7 +10,8 @@ edition = "2018"
 parking_lot = "=0.12.1"
 lazy_static = "=1.4.0"
 hex = "=0.4.3"
-failure = "=0.1.8"
+anyhow = "=1.0.79"
+thiserror = "=1.0.56"
 [target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
 hidapi = "=2.0.2"
 [dev-dependencies.cargo-husky]
