--- a/imkey-core/ikc-wallet/coin-bitcoin/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-bitcoin/Cargo.toml
@@ -15,7 +15,7 @@ hex = "=0.4.3"
 secp256k1 = {version ="=0.24.3", features = ["rand", "recovery"] }
 bitcoin_hashes = "=0.11.0"
 num-bigint = "=0.4.3"
-failure = "=0.1.8"
+anyhow = "=1.0.79"
 bytes = "=1.4.0"
 prost = "=0.11.2"
 prost-types = "=0.11.2"
