--- a/imkey-core/ikc-wallet/coin-eos/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-eos/Cargo.toml
@@ -13,7 +13,7 @@ ikc-transport = {path = "../../ikc-transport"}
 bitcoin_hashes = "=0.11.0"
 hex = "=0.4.3"
 bitcoin = "=0.29.2"
-failure = "=0.1.8"
+anyhow = "=1.0.79"
 bytes = "=1.4.0"
 prost = "=0.11.2"
 prost-types = "=0.11.2"
