--- a/imkey-core/ikc-wallet/coin-ethereum/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-ethereum/Cargo.toml
@@ -26,7 +26,7 @@ bitcoin_hashes = "=0.11.0"
 hex = "=0.4.3"
 regex = "=1.9.3"
 tiny-keccak = { version = "=2.0.2", features = ["keccak"] }
-failure = "=0.1.8"
+anyhow = "=1.0.79"
 num-bigint = "=0.4.3"
 num-traits = "=0.2.15"
 num-integer = "=0.1.45"
