--- a/imkey-core/ikc-wallet/coin-substrate/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-substrate/Cargo.toml
@@ -11,7 +11,7 @@ ikc-common = {path = "../../ikc-common"}
 ikc-device = {path = "../../ikc-device"}
 ikc-transport = {path = "../../ikc-transport"}
 sp-core = "=7.0.0"
-failure = "=0.1.8"
+anyhow = "=1.0.79"
 hex = "=0.4.3"
 prost = "=0.11.2"
 prost-types = "=0.11.2"
