--- a/imkey-core/ikc-wallet/coin-tron/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-tron/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 keccak-hash = "=0.10.0"
-failure = "=0.1.8"
+anyhow = "=1.0.79"
 bitcoin = "=0.29.2"
 hex = "=0.4.3"
 ikc-common = {path = "../../ikc-common"}
