--- a/token-core/tcx-btc-kin/Cargo.toml
+++ b/token-core/tcx-btc-kin/Cargo.toml
@@ -32,7 +32,7 @@ prost = "=0.11.2"
 bytes = "=1.4.0"
 prost-types = "=0.11.2"
 bch_addr = "=0.1.0"
-thiserror = "1.0.56"
+thiserror = "=1.0.56"
 
 [dev-dependencies]
 mockall = "=0.11.3"
