--- a/token-core/tcx-common/Cargo.toml
+++ b/token-core/tcx-common/Cargo.toml
@@ -17,4 +17,4 @@ bitcoin = "=0.29.2"
 tiny-bip39 = "=1.0.0"
 rand = "=0.8.5"
 ethereum-types = "0.14.0"
-thiserror = "1.0.56"
+thiserror = "=1.0.56"
