--- a/token-core/tcx-crypto/Cargo.toml
+++ b/token-core/tcx-crypto/Cargo.toml
@@ -29,7 +29,7 @@ lazy_static = "=1.4.0"
 regex = "=1.9.3"
 
 parking_lot = "=0.12.1"
-thiserror = "1.0.56"
+thiserror = "=1.0.56"
 
 [features]
 default = []
