--- a/token-core/tcx-eth2/Cargo.toml
+++ b/token-core/tcx-eth2/Cargo.toml
@@ -22,4 +22,4 @@ regex = "=1.9.3"
 keccak-hash = "=0.10.0"
 ssz_rs = "=0.8.0"
 ssz_rs_derive = "=0.8.0"
-thiserror = "1.0.56"
+thiserror = "=1.0.56"
