--- a/token-core/tcx-filecoin/Cargo.toml
+++ b/token-core/tcx-filecoin/Cargo.toml
@@ -29,4 +29,4 @@ forest_address = "=0.3.2"
 forest_encoding = "=0.2.2"
 forest_cid = "=0.3.0"
 forest_crypto = "0.5.3"
-thiserror = "1.0.56"
+thiserror = "=1.0.56"
