--- a/token-core/tcx-keystore/Cargo.toml
+++ b/token-core/tcx-keystore/Cargo.toml
@@ -29,7 +29,7 @@ lazy_static = "=1.4.0"
 parking_lot = "=0.12.1"
 prost = "=0.11.2"
 bytes = "=1.4.0"
-thiserror = "1.0.56"
+thiserror = "=1.0.56"
 
 [dev-dependencies.cargo-husky]
 version = "1"
