--- a/token-core/tcx-substrate/Cargo.toml
+++ b/token-core/tcx-substrate/Cargo.toml
@@ -33,7 +33,7 @@ base64 = "=0.13.1"
 scrypt = { version = "=0.10.0", default-features = false }
 regex = "=1.9.3"
 schnorrkel = "=0.9.1"
-thiserror = "1.0.56"
+thiserror = "=1.0.56"
 
 
 [dev-dependencies]
