fix: fix review issue by labs

--- a/token-core/tcx-eth2/Cargo.toml
+++ b/token-core/tcx-eth2/Cargo.toml
@@ -12,6 +12,7 @@ tcx-keystore = { path = "../tcx-keystore" }
 tcx-constants = { path = "../tcx-constants" }
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-crypto = { path = "../tcx-crypto" }
+tcx-eth = { path = "../tcx-eth" }
 
 prost = "=0.11.2"
 bytes = "=1.4.0"
