feat: keep old fileid and keystore in memory

--- a/token-core/test-data/.gitignore
+++ b/token-core/test-data/.gitignore
@@ -14,3 +14,5 @@
 !mainnet-identity/*
 !testnet-identity
 !testnet-identity/*
+!migrate-duplication-fixtures
+!migrate-duplication-fixtures/wallets/**
