--- a/.github/workflows/build-release-ios.yml
+++ b/.github/workflows/build-release-ios.yml
@@ -74,12 +74,12 @@ jobs:
       id: build
       run: | 
         pushd ./imkey-core/ikc
-        cargo lipo --release --targets aarch64-apple-ios x86_64-apple-ios
+        cargo lipo --release --targets aarch64-apple-ios
         cbindgen ./src/lib.rs -l c > ${{github.workspace}}/target/connector.h
         popd
         
         pushd ./token-core/tcx
-        cargo lipo --release --targets aarch64-apple-ios x86_64-apple-ios
+        cargo lipo --release --targets aarch64-apple-ios
         cbindgen ./src/lib.rs -l c > ${{github.workspace}}/target/tcx.h
         popd
         
