--- a/.github/workflows/build-release-ios.yml
+++ b/.github/workflows/build-release-ios.yml
@@ -53,6 +53,7 @@ jobs:
         rustup target add aarch64-apple-ios x86_64-apple-ios
         rustup show
         cargo install cargo-lipo
+        cargo install cbindgen
         brew install protobuf
 
     - name: Read VERSION file
