--- a/token-core/tcx-btc-kin/Cargo.toml
+++ b/token-core/tcx-btc-kin/Cargo.toml
@@ -14,7 +14,7 @@ tcx-common = { path = "../tcx-common" }
 hex = "=0.4.3"
 base64 = "=0.13.1"
 
-bitcoin = "=0.29.2"
+bitcoin = {version = "=0.29.2", features = ["serde", "std", "secp-recovery"] }
 secp256k1 = {version ="=0.24.3", features = ["rand", "recovery", "rand-std"] }
 tiny-bip39 = "=1.0.0"
 bitcoin_hashes = "=0.11.0"
