--- a/imkey-core/ikc-wallet/coin-cosmos/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-cosmos/Cargo.toml
@@ -15,12 +15,12 @@ hex = "=0.4.3"
 bitcoin = "=0.29.2"
 secp256k1 = {version ="=0.24.3", features = ["rand", "recovery"] }
 bech32 = "=0.9.1"
-serde = { version = "=1.0.147", features = ["derive"] }
-serde_derive = "=1.0.147"
+serde = { version = "=1.0.165", features = ["derive"] }
+serde_derive = "=1.0.165"
 serde_json = { version = "=1.0.89", default-features = false, features = ["alloc"] }
-num-bigint = "=0.4.3"
-num-traits = "=0.2.15"
-num-integer = "=0.1.45"
+num-bigint = "=0.4.6"
+num-traits = "=0.2.19"
+num-integer = "0.1.46"
 base64 = "=0.13.1"
 anyhow = "=1.0.79"
 bytes = "=1.4.0"
