--- a/imkey-core/ikc-wallet/coin-filecoin/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-filecoin/Cargo.toml
@@ -17,6 +17,7 @@ hex = "=0.4.3"
 secp256k1 = {version ="=0.24.3", features = ["rand", "recovery"] }
 bech32 = "=0.9.1"
 num-bigint = "=0.4.6"
+num = "0.4.3"
 num-traits = "=0.2.19"
 num-integer = "=0.1.46"
 base64 = "=0.13.1"
@@ -31,12 +32,14 @@ blake2b-rs = "=0.2.0"
 serde = { version = "=1.0.165", features = ["derive"] }
 serde_json = "=1.0.89"
 
-forest_vm = "=0.3.2"
-forest_message = "=0.7.2"
-forest_address = "=0.3.2"
-forest_encoding = "=0.2.2"
-forest_cid = "=0.3.0"
-forest_crypto = "=0.5.3"
+multihash-codetable = { version = "=0.1.3", features = ["blake2b"] }
+cid = "=0.11.1"
+fvm_shared = "=4.3.1"
+fvm_ipld_encoding = "0.4.0"
+serde_tuple = "0.5.0"
+strum_macros = "0.26.3"
+strum = { version = "0.26.3", features = ["derive"] }
 num_bigint_chainsafe = { package = "forest_bigint", version = "=0.1.4"}
 bitcoin = "=0.29.2"
+num-derive = "0.4.2"
 
