--- a/imkey-core/ikc-wallet/coin-filecoin/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-filecoin/Cargo.toml
@@ -16,9 +16,10 @@ bitcoin_hashes = "=0.11.0"
 hex = "=0.4.3"
 secp256k1 = {version ="=0.24.3", features = ["rand", "recovery"] }
 bech32 = "=0.9.1"
-num-bigint = "=0.4.3"
-num-traits = "=0.2.15"
-num-integer = "=0.1.45"
+num-bigint = "=0.4.6"
+num = "0.4.3"
+num-traits = "=0.2.19"
+num-integer = "=0.1.46"
 base64 = "=0.13.1"
 anyhow = "=1.0.79"
 bytes = "=1.4.0"
@@ -28,15 +29,16 @@ linked-hash-map = { version = "=0.5.6", features = ["serde_impl"] }
 
 base32 = "=0.4.0"
 blake2b-rs = "=0.2.0"
-serde = { version = "=1.0.147", features = ["derive"] }
+serde = { version = "=1.0.165", features = ["derive"] }
 serde_json = "=1.0.89"
 
-forest_vm = "=0.3.2"
-forest_message = "=0.7.2"
-forest_address = "=0.3.2"
-forest_encoding = "=0.2.2"
-forest_cid = "=0.3.0"
-forest_crypto = "=0.5.3"
-num_bigint_chainsafe = { package = "forest_bigint", version = "=0.1.4"}
+multihash-codetable = { version = "=0.1.3", features = ["blake2b"] }
+cid = "=0.11.1"
+fvm_shared = "=4.3.1"
+fvm_ipld_encoding = "0.4.0"
+serde_tuple = "0.5.0"
+strum_macros = "0.26.3"
+strum = { version = "0.26.3", features = ["derive"] }
 bitcoin = "=0.29.2"
+num-derive = "0.4.2"
 
