--- a/imkey-core/ikc-webusb/Cargo.toml
+++ b/imkey-core/ikc-webusb/Cargo.toml
@@ -4,7 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = "0.2.93"
-web-sys = { version = "0.3.70", features = ["Usb", "UsbDevice", "Window", "WebTransport", "Navigator", "Serial"] }
+wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
+web-sys = { version = "0.3.70", features = ["Usb", "UsbDevice", "Window", "WebTransport", "Navigator", "Serial", "UsbDeviceRequestOptions", "console"] }
+serde_json = "1.0.89"
+js-sys = "0.3"
+wasm-bindgen-futures = "0.4"
+wasm-bindgen-test = "0.3.0"
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3.0"
