--- a/imkey-core/ikc-webusb/Cargo.toml
+++ b/imkey-core/ikc-webusb/Cargo.toml
@@ -9,11 +9,12 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
-web-sys = { version = "0.3.70", features = ["Usb", "UsbDevice", "Window", "WebTransport", "Navigator", "Serial", "UsbDeviceRequestOptions", "console"] }
+web-sys = { version = "0.3.70", features = ["Usb", "UsbDevice", "Window", "WebTransport", "Navigator", "Serial", "UsbDeviceRequestOptions", "console", "UsbDeviceFilter"] }
 serde_json = "1.0.89"
 js-sys = "0.3"
 wasm-bindgen-futures = "0.4"
 wasm-bindgen-test = "0.3.0"
+serde-wasm-bindgen = "0.3"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.0"
