--- a/imkey-core/ikc-wallet/coin-substrate/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-substrate/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 ikc-common = {path = "../../ikc-common"}
 ikc-device = {path = "../../ikc-device"}
 ikc-transport = {path = "../../ikc-transport"}
-sp-core = "=7.0.0"
+sp-core = { version = "=34.0.0", features = ["std"] }
 anyhow = "=1.0.79"
 hex = "=0.4.3"
 prost = "=0.11.2"
@@ -18,5 +18,5 @@ prost-types = "=0.11.2"
 
 
 [dev-dependencies]
-sp-runtime = "=7.0.0"
-sp-keyring = "=7.0.0"
+sp-runtime = "=39.0.1"
+#sp-keyring = "=7.0.0"
