--- a/token-core/tcx/Cargo.toml
+++ b/token-core/tcx/Cargo.toml
@@ -29,9 +29,9 @@ bytes = "=1.4.0"
 prost-types = "=0.11.2"
 
 libc = "=0.2.140"
-log = "=0.4.17"
+log = "=0.4.22"
 serde_json = "=1.0.89"
-serde = { version = "=1.0.147", features = ["derive"] }
+serde = { version = "=1.0.210", features = ["derive"] }
 anyhow = { version = "=1.0.79", features = [] }
 lazy_static = "=1.4.0"
 hex = "=0.4.3"
@@ -50,5 +50,5 @@ prost-build = "=0.11.4"
 
 [dev-dependencies]
 serial_test = "=2.0.0"
-sp-core = "=7.0.0"
-sp-runtime = "=7.0.0"
+sp-core = { version = "=34.0.0", features = ["std"] }
+sp-runtime = "=39.0.1"
