--- a/imkey-core/ikc-wallet/coin-cosmos/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-cosmos/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 ikc-common = {path = "../../ikc-common"}
 ikc-device = {path = "../../ikc-device"}
 ikc-transport = {path = "../../ikc-transport"}
+tcx-atom = {path = "../../../token-core/tcx-atom"}
 bitcoin_hashes = "=0.11.0"
 hex = "=0.4.3"
 bitcoin = "=0.29.2"
