--- a/.github/workflows/build-release-ios.yml
+++ b/.github/workflows/build-release-ios.yml
@@ -52,12 +52,12 @@ jobs:
 
       - name: Install Rust
         run: |
-          rustup toolchain install nightly-2022-10-31
-          rustup default nightly-2022-10-31-x86_64-apple-darwin
+          rustup toolchain install nightly-2023-06-15
+          rustup default nightly-2023-06-15-x86_64-apple-darwin
           rustup target add aarch64-apple-ios x86_64-apple-ios
           rustup show
           cargo install cargo-lipo
-          cargo install cbindgen
+          cargo install cbindgen --version 0.26.0
           brew install protobuf
 
       - name: Read VERSION file
