--- a/publish/android/build.gradle
+++ b/publish/android/build.gradle
@@ -13,9 +13,9 @@ buildscript {
 }
 
 plugins {
-    id("io.github.gradle-nexus.publish-plugin") version "1.3.0"
     id("maven-publish")
     id("signing")
+    id("org.jreleaser") version "1.10.0"
 }
 
 version System.getenv("VERSION") ?: project['version']
@@ -54,7 +54,6 @@ afterEvaluate {
                         url = "https://github.com/consenlabs/token-core-monorepo"
                     }
                 }
-
             }
         }
     }
@@ -85,11 +84,45 @@ afterEvaluate {
     }
 }
 
-nexusPublishing {
-    repositories {
-        sonatype {  //only for users registered in Sonatype after 24 Feb 2021
-            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
-            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+jreleaser {
+    project {
+        name = 'token-core'
+        description = 'A android library for web3'
+        website = 'https://github.com/consenlabs/token-core-monorepo'
+        license = 'Apache-2.0'
+        java {
+            groupId = this.group
+            version = this.version
+        }
+    }
+    
+    deploy {
+        maven {
+            // 配置OSSRH中央仓库
+            nexus2 {
+                maven {
+                    active = 'ALWAYS'
+                    url = 'https://s01.oss.sonatype.org/service/local'
+                    // 使用GitHub Actions的环境变量
+                    // 用户名和密码在workflow文件中设置为环境变量
+                    username = '{{jreleaser.nexus2.username}}'
+                    password = '{{jreleaser.nexus2.password}}'
+                    closeRepository = true
+                    releaseRepository = true
+                    stagingRepositories = ['build/staging-deploy']
+                    // 要发布的产物
+                    publication = 'Production'
+                    // 是否要签名，默认为true
+                    sign = true
+                    // 使用GPG签名
+                    gpg {
+                        // 使用环境变量中定义的GPG密钥对
+                        publicKey = '{{jreleaser.gpg.public.key}}'
+                        secretKey = '{{jreleaser.gpg.secret.key}}'
+                        passphrase = '{{jreleaser.gpg.passphrase}}'
+                    }
+                }
+            }
         }
     }
 }
