--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -7,7 +7,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  JRELEASER_GPG_PASSPHRASE: ${{ secrets.SIGNING_SECRET }}
+  JRELEASER_GPG_PASSPHRASE: ${{ secrets.SIGNING_SECRET_JRELEASER }}
   JRELEASER_GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
   JRELEASER_GPG_SECRET_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
   JRELEASER_NEXUS2_USERNAME: ${{ secrets.OSSRH_USERNAME }}
