temppotary set to run CI manually

--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -1,8 +1,7 @@
 name: Build Android Release
 
 on:
-  pull_request_review:
-    types: [submitted]
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
