--- a/publish/android/build.gradle
+++ b/publish/android/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 plugins {
     id("maven-publish")
     id("signing")
-    id("org.jreleaser") version "1.10.0"
+    id("org.jreleaser") version "1.18.0"
 }
 
 version System.getenv("VERSION") ?: project['version']
@@ -95,6 +95,14 @@ jreleaser {
             version = this.version
         }
     }
+
+    signing {
+        active = 'ALWAYS'
+        armored = true
+        publicKey = '{{jreleaser.gpg.public.key}}'
+        secretKey = '{{jreleaser.gpg.secret.key}}'
+        passphrase = '{{jreleaser.gpg.passphrase}}'
+    }
     
     deploy {
         maven {
@@ -111,16 +119,9 @@ jreleaser {
                     releaseRepository = true
                     stagingRepositories = ['build/staging-deploy']
                     // 要发布的产物
-                    publication = 'Production'
+                    // publication = 'Production'
                     // 是否要签名，默认为true
                     sign = true
-                    // 使用GPG签名
-                    gpg {
-                        // 使用环境变量中定义的GPG密钥对
-                        publicKey = '{{jreleaser.gpg.public.key}}'
-                        secretKey = '{{jreleaser.gpg.secret.key}}'
-                        passphrase = '{{jreleaser.gpg.passphrase}}'
-                    }
                 }
             }
         }
