--- a/publish/android/build.gradle
+++ b/publish/android/build.gradle
@@ -101,9 +101,9 @@ jreleaser {
     signing {
         active = 'ALWAYS'
         armored = true
-        publicKey = '{{jreleaser.gpg.public.key}}'
-        secretKey = '{{jreleaser.gpg.secret.key}}'
-        passphrase = '{{jreleaser.gpg.passphrase}}'
+        publicKey = '{{env.JRELEASER_GPG_PUBLIC_KEY}}'
+        secretKey = '{{env.JRELEASER_GPG_SECRET_KEY}}'
+        passphrase = '{{env.JRELEASER_GPG_PASSPHRASE}}'
     }
     
     deploy {
