--- a/publish/android/build.gradle
+++ b/publish/android/build.gradle
@@ -56,31 +56,19 @@ afterEvaluate {
                 }
             }
         }
+        
+        repositories {
+            maven {
+                name = 'staging'
+                url = layout.buildDirectory.dir('staging-deploy')
+            }
+        }
     }
 
     signing {
-        //make signing required unless for SNAPSHOT releases or if signing is explicitly skipped
-        required { !project.version.endsWith("-SNAPSHOT") && !project.hasProperty("skipSigning") }
-
-        //look for property 'signingKey'
-        if (project.findProperty("signingKey")) {
-            //If required, read a sub-key specified by its ID in property signingKeyId
-            //def signingKeyId = findProperty("signingKeyId")
-            //read property 'signingKey'
-            def signingKey = findProperty("signingKey")
-            //read property 'signingPassword'
-            def signingPassword = findProperty("signingPassword")
-            //Select to use in-memory ascii-armored keys
-            useInMemoryPgpKeys(signingKey, signingPassword)
-            //Only if also using signingKeyId
-            //useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
-
-            //Apply signing to publication identity 'publishing.publications.maven'
-            sign publishing.publications.Production
-        } else {
-            sign publishing.publications.Production
-            // println 'WARNING: No property \'signingKey\' found. Artifact signing will be skipped.'
-        }
+        // Completely disable Gradle signing - JReleaser will handle all signing
+        required { false }
+        // No signing configuration needed here
     }
 }
 
@@ -105,13 +93,13 @@ jreleaser {
     
     deploy {
         maven {
-            // 配置OSSRH中央仓库
             nexus2 {
                 maven {
                     active = 'ALWAYS'
                     url = 'https://s01.oss.sonatype.org/service/local'
                     closeRepository = true
                     releaseRepository = true
+                    stagingRepository('build/staging-deploy')
                     sign = true
                 }
             }
