--- a/publish/android/build.gradle
+++ b/publish/android/build.gradle
@@ -19,7 +19,7 @@ plugins {
 }
 
 version System.getenv("VERSION") ?: project['version']
-group 'io.github.consenlabs.android'
+group 'io.github.consenlabs'
 
 afterEvaluate {
     publishing {
