--- a/.github/workflows/build-release-ios.yml
+++ b/.github/workflows/build-release-ios.yml
@@ -56,7 +56,7 @@ jobs:
           rustup default nightly-2023-06-15-x86_64-apple-darwin
           rustup target add aarch64-apple-ios x86_64-apple-ios
           rustup show
-          cargo install cargo-lipo --version 3.0.1 --locked
+          cargo install cargo-lipo
           cargo install cbindgen --version 0.26.0
           brew install protobuf
 
